[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Main_Background.png" type="Texture" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Level1.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2048.0
margin_bottom = 1024.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -301.0
alignment = 1

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 510.0
margin_bottom = 299.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 510, 299 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/ViewportContainer/Viewport"]
scale = Vector2( 100, 100 )
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Level1" parent="VBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="VBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 299.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="VBoxContainer/ViewportContainer2"]
size = Vector2( 510, 299 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/ViewportContainer2/Viewport2"]
position = Vector2( 81, -175 )
scale = Vector2( 100, 100 )
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 302.0
margin_bottom = 1.0

[node name="ViewportContainer3" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 299.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport3" type="Viewport" parent="HBoxContainer/ViewportContainer3"]
size = Vector2( 510, 299 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer3/Viewport3"]
scale = Vector2( 100, 100 )
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="ViewportContainer4" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 299.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport3" type="Viewport" parent="HBoxContainer/ViewportContainer4"]
size = Vector2( 510, 299 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ViewportContainer4/Viewport3"]
margin_left = -500.0
margin_top = -500.0
margin_right = 1548.0
margin_bottom = 524.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer4/Viewport3"]
scale = Vector2( 100, 100 )
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
